--- a/fall_detection/requirements.txt
+++ b/fall_detection/requirements.txt
@@ -1,6 +1,8 @@
 # Fall Detection System Dependencies
 opencv-python>=4.8.0
-mediapipe>=0.10.0
+mediapipe==0.10.9
 paho-mqtt>=1.6.0
 flask>=2.3.0
 numpy>=1.24.0
+dotenv
+boto3
